# OpenRTL.ai

./: .gitignore  README.md  app.py  launch_openrtl.sh  oneStepSolution.py  pyproject.toml  requirements.txt  run.py
 /home/ayush/Documents/mux_8to2/src/: mux_8to2.v
 /home/ayush/Documents/mux_8to2/tb/: mux_8to2_tb.v
database/: folder_structure.db
openrtl/: __init__.py  __main__.py  agents.py  cli.py  config.py  exceptions.py  knowledge.py  logging.py  main.py  models.py  pipeline.py  streamlit_app.py  team.py  tools.py  workflow.py
openrtl/services/: database.py  filesystem.py
projects/sdc_outputs/: full_adder.sdc  half_adder.sdc
tests/: test_exceptions.py  test_pipeline.py  test_services.py  test_tools.py
utils/: ai_error_fixer.py  code_generator.py  homepage.py  ide_environment.py  rtl_metrics.py  sdc_generator.py  synthesis.py
