[project]
name = "openrtl"
version = "3.0.0"
description = "FPGA development pipeline from natural-language descriptions"
requires-python = ">=3.11"
dependencies = [
    "agno>=2.6.20",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project.scripts]
openrtl = "openrtl.cli:main"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (full pipeline with API calls)",
    "unit: marks tests as unit tests (no external deps)",
]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
addopts = "-p no:cacheprovider"

[tool.coverage.run]
source = ["openrtl"]
